--- a/datasets/homeless_analysis.ipynb
+++ b/datasets/homeless_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "8f73abe2",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "54    WY                         804"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "80fe4d5e",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "201b31f2",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
     "plt.xlabel(\"State\")\n",
     "plt.ylabel(\"Count\")\n",
     "plt.grid()\n",
-    "plt.savefig('../Graphs/2020 Homeless Population By State.png')"
+    "plt.savefig('../Graphs/2020 Homeless Shelter Beds Count By State.png')"
    ]
   },
   {
