--- a/datasets/homeless_analysis.ipynb
+++ b/datasets/homeless_analysis.ipynb
@@ -2,379 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8f73abe2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>Total Year-Round Beds 2020</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK</td>\n",
-       "      <td>1885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>2913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AR</td>\n",
-       "      <td>1686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>6079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>53265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>8274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CT</td>\n",
-       "      <td>2600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>6687</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>1026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>FL</td>\n",
-       "      <td>17793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>GA</td>\n",
-       "      <td>7413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>GU</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>HI</td>\n",
-       "      <td>3384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>IA</td>\n",
-       "      <td>2566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>ID</td>\n",
-       "      <td>1577</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>IL</td>\n",
-       "      <td>10233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>5821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>KS</td>\n",
-       "      <td>2813</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>KY</td>\n",
-       "      <td>3322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>LA</td>\n",
-       "      <td>2580</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>MA</td>\n",
-       "      <td>17528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>MD</td>\n",
-       "      <td>5221</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>ME</td>\n",
-       "      <td>2348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>MI</td>\n",
-       "      <td>8964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>MN</td>\n",
-       "      <td>6730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>MO</td>\n",
-       "      <td>5763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>MP</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>MS</td>\n",
-       "      <td>962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>MT</td>\n",
-       "      <td>1351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>NC</td>\n",
-       "      <td>7928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>ND</td>\n",
-       "      <td>757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>NE</td>\n",
-       "      <td>2764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>NH</td>\n",
-       "      <td>1574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>NJ</td>\n",
-       "      <td>7178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>NM</td>\n",
-       "      <td>2379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>NV</td>\n",
-       "      <td>3153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>NY</td>\n",
-       "      <td>88955</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>OH</td>\n",
-       "      <td>9253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>OK</td>\n",
-       "      <td>3101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>OR</td>\n",
-       "      <td>5957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>PA</td>\n",
-       "      <td>12789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>PR</td>\n",
-       "      <td>731</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>RI</td>\n",
-       "      <td>993</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>SC</td>\n",
-       "      <td>3067</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>SD</td>\n",
-       "      <td>1215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>TN</td>\n",
-       "      <td>5060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>18141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>UT</td>\n",
-       "      <td>2865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>VA</td>\n",
-       "      <td>4973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>VI</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>VT</td>\n",
-       "      <td>823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>WA</td>\n",
-       "      <td>14817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>WI</td>\n",
-       "      <td>4341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>WV</td>\n",
-       "      <td>1480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>WY</td>\n",
-       "      <td>804</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   State  Total Year-Round Beds 2020\n",
-       "0     AK                        1885\n",
-       "1     AL                        2913\n",
-       "2     AR                        1686\n",
-       "3     AZ                        6079\n",
-       "4     CA                       53265\n",
-       "5     CO                        8274\n",
-       "6     CT                        2600\n",
-       "7     DC                        6687\n",
-       "8     DE                        1026\n",
-       "9     FL                       17793\n",
-       "10    GA                        7413\n",
-       "11    GU                         145\n",
-       "12    HI                        3384\n",
-       "13    IA                        2566\n",
-       "14    ID                        1577\n",
-       "15    IL                       10233\n",
-       "16    IN                        5821\n",
-       "17    KS                        2813\n",
-       "18    KY                        3322\n",
-       "19    LA                        2580\n",
-       "20    MA                       17528\n",
-       "21    MD                        5221\n",
-       "22    ME                        2348\n",
-       "23    MI                        8964\n",
-       "24    MN                        6730\n",
-       "25    MO                        5763\n",
-       "26    MP                          30\n",
-       "27    MS                         962\n",
-       "28    MT                        1351\n",
-       "29    NC                        7928\n",
-       "30    ND                         757\n",
-       "31    NE                        2764\n",
-       "32    NH                        1574\n",
-       "33    NJ                        7178\n",
-       "34    NM                        2379\n",
-       "35    NV                        3153\n",
-       "36    NY                       88955\n",
-       "37    OH                        9253\n",
-       "38    OK                        3101\n",
-       "39    OR                        5957\n",
-       "40    PA                       12789\n",
-       "41    PR                         731\n",
-       "42    RI                         993\n",
-       "43    SC                        3067\n",
-       "44    SD                        1215\n",
-       "45    TN                        5060\n",
-       "46    TX                       18141\n",
-       "47    UT                        2865\n",
-       "48    VA                        4973\n",
-       "49    VI                          92\n",
-       "50    VT                         823\n",
-       "51    WA                       14817\n",
-       "52    WI                        4341\n",
-       "53    WV                        1480\n",
-       "54    WY                         804"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -384,8 +15,7 @@
     "beds_df=pd.read_csv(\"beds_17-20df.csv\").dropna(how='any').set_index('State',drop=True)\n",
     "pop_df=pd.read_csv(\"homeless_pop17-20.csv\").dropna(how='any').set_index('State',drop=True)\n",
     "pop2020_df=pd.read_csv(\"2020justcount.csv\").dropna(how='any')\n",
-    "beds2020_df=pd.read_csv(\"beds20count.csv\").dropna(how='any')\n",
-    "beds2020_df"
+    "beds2020_df=pd.read_csv(\"beds20count.csv\").dropna(how='any')\n"
    ]
   },
   {
