--- a/Homeless Resources Analysis/Homeless_Resources.ipynb
+++ b/Homeless Resources Analysis/Homeless_Resources.ipynb
@@ -12,6 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as st\n",
     "\n",
+    "#read in data files set index to the States and drop null variables\n",
     "beds_df=pd.read_csv(\"beds_17-20df.csv\").dropna(how='any').set_index('State',drop=True)\n",
     "pop_df=pd.read_csv(\"homeless_pop17-20.csv\").dropna(how='any').set_index('State',drop=True)\n",
     "pop2020_df=pd.read_csv(\"2020justcount.csv\").dropna(how='any')\n",
@@ -38,14 +39,22 @@
     }
    ],
    "source": [
-    "\n",
+    "#store variables\n",
     "states=pop2020_df['State']\n",
     "count=pop2020_df['Overall Homeless, 2020']\n",
     "x_axis=np.arange(len(states))\n",
+    "\n",
+    "#set ticker labels for each number in the length of x axis\n",
     "tick_locations = [value for value in x_axis]\n",
+    "\n",
+    "#create graph and size\n",
     "plt.figure(figsize=(20,3))\n",
     "plt.bar(x_axis, count, color=\"b\", align=\"center\")\n",
+    "\n",
+    "#plot ticker labels\n",
     "plt.xticks(tick_locations, states, rotation=\"vertical\")\n",
+    "\n",
+    "#plot title, x, and y labels\n",
     "plt.title(\"2020 Homeless Population By State\")\n",
     "plt.xlabel(\"State\")\n",
     "plt.ylabel(\"Count\")\n",
@@ -73,13 +82,22 @@
     }
    ],
    "source": [
+    "#store variables\n",
     "states=beds2020_df['State']\n",
     "count=beds2020_df['Total Year-Round Beds 2020']\n",
     "x_axis=np.arange(len(states))\n",
+    "\n",
+    "#set ticker labels for each number in the length of x axis\n",
     "tick_locations = [value for value in x_axis]\n",
+    "\n",
+    "#create graph and size\n",
     "plt.figure(figsize=(20,3))\n",
     "plt.bar(x_axis, count, color=\"r\", align=\"center\")\n",
+    "\n",
+    "#plot ticker labels\n",
     "plt.xticks(tick_locations, states, rotation=\"vertical\")\n",
+    "\n",
+    "#plot title, x, and y labels\n",
     "plt.title(\"2020 Homeless Shelter Beds Count By State\")\n",
     "plt.xlabel(\"State\")\n",
     "plt.ylabel(\"Count\")\n",
@@ -94,17 +112,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#store total count of beds for each year\n",
     "totalbeds_2020=beds_df[\"Total Year-Round Beds 2020\"].sum()\n",
     "totalbeds_2019=beds_df[\"Total Year-Round Beds 2019\"].sum()\n",
     "totalbeds_2018=beds_df[\"Total Year-Round Beds 2018\"].sum()\n",
     "totalbeds_2017=beds_df[\"Total Year-Round Beds 2017\"].sum()\n",
     "\n",
+    "#create new data frame\n",
     "totalbeds_df=pd.DataFrame({\n",
     "             \"2017\":[totalbeds_2017],\n",
     "             \"2018\":[totalbeds_2018],\n",
     "             \"2019\":[totalbeds_2019],\n",
     "             \"2020\":[totalbeds_2020]\n",
     "})\n",
+    "\n",
+    "#rotate data frame and convert to numpy\n",
     "totalbeds_transpose=totalbeds_df.transpose()\n",
     "totalbeds_transpose1=totalbeds_transpose.to_numpy()"
    ]
@@ -116,17 +138,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#store total count of homeless pop for each year\n",
     "totalpop_2020=pop_df[\"Overall Homeless, 2020\"].sum()\n",
     "totalpop_2019=pop_df[\"Overall Homeless, 2019\"].sum()\n",
     "totalpop_2018=pop_df[\"Overall Homeless, 2018\"].sum()\n",
     "totalpop_2017=pop_df[\"Overall Homeless, 2017\"].sum()\n",
     "\n",
+    "#create new data frame\n",
     "totalpop_df=pd.DataFrame({\n",
     "             \"2017\":[totalpop_2017],\n",
     "             \"2018\":[totalpop_2018],\n",
     "             \"2019\":[totalpop_2019],\n",
     "             \"2020\":[totalpop_2020],\n",
     "})\n",
+    "\n",
+    "#rotate data frame and convert to numpy\n",
     "totalpop_df_transpose=totalpop_df.transpose()\n",
     "totalpop_df_transpose1=totalpop_df_transpose.to_numpy()"
    ]
@@ -151,8 +177,10 @@
     }
    ],
    "source": [
+    "#create years for graph\n",
     "years=['2017','2018','2019','2020']\n",
     "\n",
+    "#plot each data frame and legend\n",
     "totalpop, = plt.plot(years, totalpop_df_transpose1, color=\"blue\", label=\"Total Homeless Population\" )\n",
     "totalbeds,= plt.plot(years, totalbeds_transpose1, color=\"red\", label=\"Total Bed Count\" )\n",
     "plt.legend(handles=[totalpop, totalbeds], loc=\"best\")\n",
@@ -185,10 +213,14 @@
     }
    ],
    "source": [
-    "\n",
+    "#create data from of just beds count over years\n",
+    "#rotate data frame and reset index so State is a column\n",
     "totalbeds_df2= totalbeds_df.transpose().reset_index()\n",
+    "\n",
+    "#create bar plot \n",
     "plt.bar(years,totalbeds_df2[0],color='maroon')\n",
     "\n",
+    "#title and labels\n",
     "plt.title('Years vs Total Count of Beds in Shelters')\n",
     "plt.xlabel('Years')\n",
     "plt.ylabel('Count')\n",
@@ -197,46 +229,6 @@
     "\n",
     "plt.savefig('../Graphs/Years vs Total Count of Beds in Shelters.png')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfdcd1f7",
-   "metadata": {},
-   "source": [
-    "# Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "934acedf",
-   "metadata": {},
-   "source": [
-    "1. First thing I noticed looking at the line plot comparing the homeless population change over time vs the count of beds in homeless shelters, was that the nation is inadequately equipped to meet the needs of the growing homeless population."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47bb0839",
-   "metadata": {},
-   "source": [
-    "2. From the first plot we can see there has been a drastic turn upwards in 2018 in the population of homeless people yet that turn in numbers was not reflected in the count of beds which kept about the same mount throughout the 4 years."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "935dfcef",
-   "metadata": {},
-   "source": [
-    "3. With that being said we can conclude the country having putting up enough resources to combat the growing count in the homeless population.  Building more homeless shelters in the most harder the access areas and the most dense cities could help bringing up the amount of beds available in shelters.  This in turn can bring down the population count as well as more homeless people are able to rehab their lives in the shelters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1d75345",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
